pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_4.dart.strong.expect
library test;
import self as self;
import "dart:core" as core;

class A<T extends core::Object> extends core::Object {
  generic-covariant-impl generic-covariant-interface field self::A::T x = null;
  default constructor •() → void
    : super core::Object::•()
    ;
}
class B<E extends core::Object> extends self::A<self::B::E> {
  generic-covariant-impl generic-covariant-interface field self::B::E y = null;
  default constructor •() → void
    : super self::A::•()
    ;
  get x() → self::B::E
    return this.{self::B::y};
}
static const field dynamic #errors = const <dynamic>["pkg/front_end/testcases/inference/infer_types_on_generic_instantiations_4.dart:18:7: Error: A value of type 'dart.core::String' can't be assigned to a variable of type 'dart.core::int'.\nTry changing the type of the left hand side, or casting the right hand side to 'dart.core::int'.\n  int y = /*error:INVALID_ASSIGNMENT*/ new B<String>(). /*@target=B::x*/ x;\n      ^"]/* from null */;
static method foo() → dynamic {
  core::int y = new self::B::•<core::String>().{self::B::x} as{TypeError} core::int;
  core::String z = new self::B::•<core::String>().{self::B::x};
}
static method main() → dynamic {
  self::foo();
}
